# template

./: .envrc  .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  build.ninja  flake.nix  matplotlibrc  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: always-load-direnv.mdc
.github/workflows/: figures.yml  paper.yml  pre-commit.yml  setup-toolchain.yml  test-runner.yml  update-flake-lock.yml
paper/: .gitignore  main.tex
paper-latex/: main.tex
paper-typst/: main.typ
src/: hello.py
