[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
]

[tool.pyright]
# disable pyright in favor of ruff
typeCheckingMode = "off"
ignore = ["*"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle - Style guide enforcement
    "F", # Pyflakes - Logical error detection
    "UP", # pyupgrade - Modernize Python syntax
    "B", # flake8-bugbear - Bug risk detection
    "SIM", # flake8-simplify - Code simplification suggestions
    "I", # isort - Import sorting
]
ignore = [
    "E501" # Ignore line length violations that weren't autofixed by formatter
]
